// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deviceIdentityCommandBar snapshot matches snapshot 1`] = `
<StyledCommandBarBase
  items={
    [
      {
        "ariaLabel": "deviceIdentity.commands.save",
        "disabled": undefined,
        "iconProps": {
          "iconName": "Save",
        },
        "key": "Save",
        "name": "deviceIdentity.commands.save",
        "onClick": [MockFunction],
      },
      {
        "ariaLabel": "deviceIdentity.commands.manageKeys.ariaLabel",
        "disabled": true,
        "iconProps": {
          "iconName": "Permissions",
        },
        "key": "manageKeys",
        "name": "deviceIdentity.commands.manageKeys.label",
        "subMenuProps": {
          "items": [
            {
              "ariaLabel": "deviceIdentity.commands.regeneratePrimary.ariaLabel",
              "disabled": true,
              "iconProps": {
                "iconName": "AzureKeyVault",
              },
              "key": "regeneratePrimary",
              "name": "deviceIdentity.commands.regeneratePrimary.label",
              "onClick": undefined,
            },
            {
              "ariaLabel": "deviceIdentity.commands.regenerateSecondary.ariaLabel",
              "disabled": true,
              "iconProps": {
                "iconName": "AzureKeyVault",
              },
              "key": "regenerateSecondary",
              "name": "deviceIdentity.commands.regenerateSecondary.label",
              "onClick": undefined,
            },
            {
              "ariaLabel": "deviceIdentity.commands.swapKeys.ariaLabel",
              "disabled": true,
              "iconProps": {
                "iconName": "SwitcherStartEnd",
              },
              "key": "swapKeys",
              "name": "deviceIdentity.commands.swapKeys.label",
              "onClick": undefined,
            },
          ],
        },
      },
    ]
  }
/>
`;

exports[`deviceIdentityCommandBar snapshot matches snapshot with disabled save 1`] = `
<StyledCommandBarBase
  items={
    [
      {
        "ariaLabel": "deviceIdentity.commands.save",
        "disabled": true,
        "iconProps": {
          "iconName": "Save",
        },
        "key": "Save",
        "name": "deviceIdentity.commands.save",
        "onClick": [MockFunction],
      },
      {
        "ariaLabel": "deviceIdentity.commands.manageKeys.ariaLabel",
        "disabled": true,
        "iconProps": {
          "iconName": "Permissions",
        },
        "key": "manageKeys",
        "name": "deviceIdentity.commands.manageKeys.label",
        "subMenuProps": {
          "items": [
            {
              "ariaLabel": "deviceIdentity.commands.regeneratePrimary.ariaLabel",
              "disabled": true,
              "iconProps": {
                "iconName": "AzureKeyVault",
              },
              "key": "regeneratePrimary",
              "name": "deviceIdentity.commands.regeneratePrimary.label",
              "onClick": undefined,
            },
            {
              "ariaLabel": "deviceIdentity.commands.regenerateSecondary.ariaLabel",
              "disabled": true,
              "iconProps": {
                "iconName": "AzureKeyVault",
              },
              "key": "regenerateSecondary",
              "name": "deviceIdentity.commands.regenerateSecondary.label",
              "onClick": undefined,
            },
            {
              "ariaLabel": "deviceIdentity.commands.swapKeys.ariaLabel",
              "disabled": true,
              "iconProps": {
                "iconName": "SwitcherStartEnd",
              },
              "key": "swapKeys",
              "name": "deviceIdentity.commands.swapKeys.label",
              "onClick": undefined,
            },
          ],
        },
      },
    ]
  }
/>
`;
